--- a/Frontend/src/components/Book/Book.css
+++ b/Frontend/src/components/Book/Book.css
@@ -3,21 +3,20 @@
   flex-direction: column;
   align-content: center;
   justify-content: flex-start;
-  background-color: aqua;
-  border: 2px solid black;
+  background-color: rgb(239, 237, 237);
+  border-radius: 10px;
   padding: 10px;
 }
 .second {
   margin: 10px;
   height: 100px;
-  background-color: rgb(161, 231, 231);
-
+  background-color: rgb(211, 235, 243);
+  border-radius: 10px;
 }
-.buttonDiv{
+.buttonDiv {
   display: flex;
   flex-direction: column;
-  align-items: center;  
-
+  justify-content: center;
 }
 .card {
   margin: auto;
@@ -28,35 +27,30 @@
   flex-direction: row;
   border-radius: 10px;
   justify-content: space-between;
-  
 }
 img {
   height: 100%;
   object-fit: contain;
 }
-.imageDiv{
-  align-items: center;  
+.imageDiv {
+  align-items: center;
   width: 1vw;
-
 }
 
-
-.imageDivPreview img{
-  align-items: center;  
+.imageDivPreview img {
+  align-items: center;
   width: 1vw;
   width: 700px;
 }
 
-.book-info{
+.book-info {
   width: 50%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  
-
 }
-.addButtonDiv{
+.addButtonDiv {
   display: flex;
   justify-content: end;
   padding-top: 10px;
